Consertado bug do ícone e fundo do modo noturno

--- a/night.css
+++ b/night.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url(src/estrela.jpg);
+    background-image: url(src/starry-night-7060108_1280.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
